<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Assistant Ref</string>
    <string name="action_settings">Settings</string>
    <string name="color_picker_spinner">U-6</string>
	<string name="selectteamcolor">Next Select The Team Colors</string>
	<string name="team_1_choose_color">Choose Team 1 Color</string>
	<string name="team_2_choose_color">Choose Team 2 Color</string>
	<string name="vs">Vs</string>
	<string name="kickoff_button_label">Prepare For Kickoff!</string>
	<string name="wkob_label">Switch Kick Off?</string>
</resources>