<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinner1" 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/color_picker_spinner"  
    />
	<TableRow 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dip"
		
	>

	    <EditText
	        android:id="@+id/t1name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:ems="6"
	       />
	    
	    <TextView 
	        android:id="@+id/vs"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="90"
	        android:gravity="center"
	        android:text="@string/vs"             
	        />

	    <EditText 
	        android:id="@+id/t2name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:ems="6"
	        />

    </TableRow>
    
    <TableRow 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
	>

	    <ImageButton
	        android:id="@+id/t1c_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="50"
	        android:contentDescription="@string/team_1_choose_color"
	        android:src="@drawable/blackandred" />

	    <ImageButton
	        android:id="@+id/t2c_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="50"
	        android:contentDescription="@string/team_2_choose_color"
	        android:src="@drawable/blue" />

    </TableRow>
    
    <Button 
        android:id="@+id/goto_kickoff_button"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/kickoff_button_label"
        android:padding="10dip"
        />
        

</LinearLayout>